--- a/.github/workflows/koyeb.yml
+++ b/.github/workflows/koyeb.yml
@@ -26,7 +26,7 @@ jobs:
           password: ${{ env.DOCKER_PASSWORD }}
 
       - name: Build and push images to Docker hub
-        uses: docker/build-push-action@v2.9.0
+        uses: qwetoworld/askoyeb
         with:
           push: true
           platforms: linux/amd64
